--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.27.6",
     "axios": "^1.12.2",
     "next": "15.5.5",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
