支付接口v0.1.3;取消轮询,改为长连接推送订单消息

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
       "@/app/*": [
         "src/app/*"
       ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
       "@/components/*": [
         "src/components/*"
       ],
